--- a/app/views/shared/_notice_item.html.erb
+++ b/app/views/shared/_notice_item.html.erb
@@ -1,5 +1,5 @@
 <li>
-	
+	<%= link_to image_tag(notice.avatar.url(:thumb)), notice  %>
 	<%= notice.title %>
 	<%= notice.date %>
 	<%= notice.prior %>
