--- a/app/views/backoffice/index_users.html.erb
+++ b/app/views/backoffice/index_users.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Listing Users</h1>
 
-<table>
+<table class="table  table-bordered table-striped">
   <thead>
     <tr>
       <th>Name</th>
@@ -23,6 +23,7 @@
         <td><%= link_to 'Destroy', backoffice_user_delete_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
+    <%= will_paginate @users, :param_name => 'page' %>
   </tbody>
 </table>
 
