--- a/app/views/shared/_job_basic_info.html.erb
+++ b/app/views/shared/_job_basic_info.html.erb
@@ -1,2 +1,2 @@
 <h1><%= @job.title %></h1>
-<%= link_to image_tag(gravatar_url( @job.user)), @job.user %>
+<%= link_to image_tag(@job.avatar.url(:medium)), job_path(@job)  %>
