--- a/app/views/users/new_company.html.erb
+++ b/app/views/users/new_company.html.erb
@@ -2,6 +2,6 @@
 
 <h1>New Company</h1>
 
-<%= render 'users/form' %>
+<%= render 'form_company' , isEdit: false%>
 
 <%= link_to 'Back', users_path %>
