--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -334,3 +334,11 @@ span.picture {
   margin-right: 0px;
 }
 
+.small_text_box{
+  width: 25% !important;
+}
+
+.margin9px{
+  margin-top: 9px;
+}
+
