--- a/app/views/users/change_password.html.erb
+++ b/app/views/users/change_password.html.erb
@@ -1,3 +1,14 @@
+
+<div class = "container">
+  <h1>Change Password</h1>
+</div>
+
+<div class = "container">
+  <strong>Name</strong><br><br>
+  <%= current_user.name %>
+  <br><br>
+</div>
+<div class = "center col-md-6">
 <%= simple_form_for(current_user , url: update_password_user_path) do |f| %>
   <%= f.error_notification %>
 
@@ -5,9 +16,9 @@
     <%= hidden_field_tag :type_of_users, current_user.type_of_users  %>
     <%= hidden_field_tag :email, current_user.email %>
     <%= f.input :old_password,  required: true %>
-    <%= f.input :password %>
+    <%= f.input :password, required: true %>
     <%= f.input :password_confirmation, required: true %>
-    <%= hidden_field_tag :name, current_user.email %>
+    <%= hidden_field_tag :name, current_user.name %>
     <%= hidden_field_tag :address, current_user.address %>
     <%= hidden_field_tag :post_code, current_user.post_code %>
     <%= hidden_field_tag :contact, current_user.contact %>
@@ -21,8 +32,11 @@
     <%= hidden_field_tag :active, current_user.active  %>
     
   </div>
-
+  
   <div class="form-actions">
-    <%= f.button :submit  ,class: "btn btn-primary" %>
+    <div class ="col-md-3">
+    <%= f.button :submit, "Ok" , class: "btn btn-primary" %>
+    </div>
   </div>
 <% end %>
+</div>
