--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -5,7 +5,7 @@
 
 /* mixins, variables, etc. */
 
-$gray-medium-light: #eaeaea;
+$gray-medium-light: #1A202C;
 
 /* universal */
 
@@ -156,7 +156,7 @@ aside {
 }
 
 input, textarea, select, .uneditable-input {
-  border: 1px solid #bbb;
+  border: 1px solid #1A202C;
   width: 100%;
   margin-bottom: 15px;
   @include box_sizing;
@@ -212,7 +212,7 @@ input {
   padding: 0;
   li {
     padding: 10px 0;
-    border-top: 1px solid #e8e8e8;
+    border-top: 1px solid #1A202C;
     border-bottom: 1px solid $gray-lighter;
   }
   .user {
