--- a/app/views/shared/_job_item.html.erb
+++ b/app/views/shared/_job_item.html.erb
@@ -1,11 +1,11 @@
 <li>
 	<div class="row_for_job">
-		<aside class="col-md-2">
-		<section class="job_info">
+		<div class="col-md-2">
+		
 	    	<%= link_to image_tag(job.avatar.url(:thumb)), job %>
-		</section>
+		
 
-		</aside>
+		</div>
 		<div class="col-md-10">
 		<section style="padding-left: 20px;">
 		  	<%= link_to job.title, job_path(job) %>
