--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,13 +1,13 @@
 <br>
 <br>
 <p>
-  <%= @user.presentation.html_safe %>
+  <%= @user.presentation.html_safe if @user.presentation %>
 </p>
 
 <p>
   <strong>Profession:</strong>
   <br>
-  <%= @user.profession.area_name %>
+  <%= @user.profession.area_name if @user.profession.present? %>
 </p>
 
 <% if @user.type_of_users == 1 %>
