--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -342,3 +342,169 @@ span.picture {
   margin-top: 9px;
 }
 
+.s-job-list {
+    background-color: #ffffff;
+    padding: 0 10px;
+    margin: 0 0 -5px;
+    border-radius: 3px 3px 0 0;
+    list-style: none;
+}
+.s-joblist-header + .s-job-list {
+    border-radius: 0;
+}
+.s-job-list li {
+    position: relative;
+    padding: 25px 0;
+    border-top: 1px solid #f3f3f3;
+    margin-bottom: 5px;
+}
+
+.s-job-list li:before,
+.s-job-list li:after {
+    display: table;
+    content: " ";
+}
+
+.s-job-list li:after {
+    clear: both;
+}
+
+.s-job-list li > div {
+    float: left;
+}
+
+.s-job-list li:first-child {
+    border-top: none;
+}
+
+.s-job-list .s-firm-logo {
+    width: 18%;
+}
+
+.s-job-list .s-job-infos {
+    width: 64%;
+    margin-left: 5px;
+    padding-right: 15px;
+}
+
+.s-job-list .s-job-date {
+    margin-left: 15px;
+    width: 100px;
+    display: inline-block;
+    text-align: center;
+}
+
+.s-job-list .s-job-location,
+.s-job-list .s-job-date,
+.s-job-list .s-firm-name {
+    color: #848484;
+    font-size: 12px;
+}
+
+.s-job-list .s-job-location {
+    width: 130px;
+    text-align: left;
+    float: left;
+    margin-top: 2px;
+    padding-left: 10px;
+}
+.s-job-list .s-firm-name {
+    width: 180px;
+}
+
+.s-job-list .s-job-transactions {
+    width: 15%;
+}
+
+.s-job-list .s-job-title {
+    display: block;
+    margin-top: -2px;
+}
+
+.s-job-list .s-btn {
+    font-size: 12px;
+    line-height: 23px;
+    display: block;
+}
+
+.s-job-list .s-job-sub-info {
+    margin-top: 5px;
+}
+
+.portlet {
+  margin-top: 0px;
+  margin-bottom: 25px;
+  padding: 0px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+}
+
+.portlet > .portlet-title {
+  border-bottom: 1px solid #eee;
+  padding: 0;
+  margin-bottom: 10px;
+  min-height: 41px;
+  -webkit-border-radius: 4px 4px 0 0;
+  -moz-border-radius: 4px 4px 0 0;
+  -ms-border-radius: 4px 4px 0 0;
+  -o-border-radius: 4px 4px 0 0;
+  border-radius: 4px 4px 0 0;
+}
+
+.portlet.bordered {
+  border-left: 2px solid #e6e9ec !important;
+}
+
+.portlet.light {
+  padding: 12px 20px 15px 20px;
+  background-color: #fff;
+}
+
+.portlet.light.bordered {
+  border: 1px solid #e1e1e1 !important;
+}
+
+.row {
+  margin-right: -15px;
+  margin-left: -15px;
+}
+.portlet.light > .portlet-title {
+  padding: 0;
+  min-height: 48px;
+}
+.portlet.light.bordered > .portlet-title {
+  border-bottom: 1px solid #eee;
+}
+
+.portlet.bordered > .portlet-title {
+  border-bottom: 0;
+}
+
+.portlet > .portlet-title > .caption {
+  float: left;
+  display: inline-block;
+  font-size: 18px;
+  line-height: 18px;
+  padding: 10px 0;
+}
+.portlet.light > .portlet-title > .caption {
+  color: #666;
+  padding: 10px 0;
+}
+.portlet.light > .portlet-title > .caption > .caption-subject {
+  font-size: 16px;
+}
+.uppercase {
+  text-transform: uppercase !important;
+}
+.bold {
+  font-weight: 700 !important;
+}
+
+.CSSAnimationChart {
+  width: 100%;
+  height: 500px;
+}
