--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   
   <head>
-
+    
     <title><%= full_title(yield(:title)) %></title>
     
     <%= stylesheet_link_tag 'application', media: 'all',
@@ -15,10 +15,22 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
-      <% flash.each do |message_type, message| %>
-        <div class="alert alert-<%= message_type %>"><%= message %></div>
-      <% end %>
+      
       	<%= yield %>
     </div>
   </body>
+  <script>
+    $(document).ready(function() {
+        tinymce.init({
+            selector: 'textarea',
+            setup: function(editor) {
+                editor.on('keyup', function(e) {
+                    // Revalidate the hobbies field
+                    //$('#simple_form new_user').formValidation('revalidateField', 'user[presentation]');
+                });
+            }
+        });
+    });
+  </script>
+
 </html>
