--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,70 +1,114 @@
+<div class = "row">
 
-<div class= "center col-md-6">
-  
-  <div class= "center jumbotron">
-    <h2>Last offers</h2>
-  
-    <% if @jobs_home.present? %>
-      <ul class="users">
-        <% @jobs_home.each do |job| %>
-           <%= render 'shared/job_item', job: job %>
-        <% end %>
-      </ul>
+  <div class= "col-md-6">
+    <div class= "portlet light bordered">
+      <div class="portlet-title">
+        <div class="caption font-dark">
+          <span class="caption-subject bold uppercase">Last offers</span>
+        </div>
+      </div>
       
-    <br>
-    <%= link_to 'Show All Jobs', jobs_path %>
-    <% else %>
-      <p>There are no job offers>.</p>
-    <% end %>
+      <div class="portlet-body">
+        <div class="CSSAnimationChart">
+          <% if @jobs_home.present? %>
+          <ul class="s-job-list">
+            <% @jobs_home.each do |job| %>
+            <%= render 'shared/job_item', job: job %>
+            <% end %>
+          </ul>
+
+          <br>
+          <%= link_to 'Show All Jobs', jobs_path %>
+          <% else %>
+          <p>There are no job offers>.</p>
+          <% end %>
+        </div>
+      </div>
+    </div>
   </div>
-  <br>
-  <br>
-  <div class= "center jumbotron">
-    <h2>Last Companies</h2>
-    <% if @companies_home.present? %>
-      <ul class="users">
-        <% @companies_home.each do |user| %>
-           <%= render 'shared/user_item', user: user %>
+  
+  <div class= "col-md-6">
+   <div class= "portlet light bordered">
+    <div class="portlet-title">
+      <div class="caption font-dark">
+        <span class="caption-subject bold uppercase">Last News</span>
+      </div>
+    </div>
+
+    <div class="portlet-body">
+      <div class="CSSAnimationChart">
+        <% if @notices_home.present? %>
+        <ul class="s-job-list">
+          <% @notices_home.each do |notice| %>
+          <%= render 'shared/notice_item', notice: notice %>
+          <% end %>
+        </ul>
+        <br>
+        <%= link_to 'Show All Notices', notices_path %>
+        <% else %>
+        <p>There are no news </p>
         <% end %>
-      </ul>
-      <br>
-    <%= link_to 'Show All Companies', companies_path %>
-    <% else %>
-      <p>There are no companies</p>
-    <% end %>
+      </div>
+    </div>
+    
   </div>
 </div>
 
-<div class= "center col-md-6">
-  
-  <div class= "center jumbotron">
-    <h2>Last notices</h2>
-    <% if @notices_home.present? %>
-      <ul class="users">
-        <% @notices_home.each do |notice| %>
-           <%= render 'shared/notice_item', notice: notice %>
-        <% end %>
-      </ul>
-      <br>
-    <%= link_to 'Show All Notices', notices_path %>
-    <% else %>
-      <p>There are no notices </p>
-    <% end %>
-  </div>
-  <br>
-  <br>
-  <div class= "center jumbotron">
-    <h2>Last Canditates</h2>
-    <% if @canditates_home.present? %>
-      <ul class="users">
-        <% @canditates_home.each do |user| %>
-           <%= render 'shared/user_item', user: user %>
-        <% end %>
-      </ul>
+
+<div class = "row">
+  <div class= "col-md-6">
+   <div class= "portlet light bordered">
+    <div class="portlet-title">
+      <div class="caption font-dark">
+        <span class="caption-subject bold uppercase">Last Companies</span>
+      </div>
+    </div>
+
+    <div class="portlet-body">
+      <div class="CSSAnimationChart">
+        <% if @companies_home.present? %>
+        <ul class="s-job-list">
+          <% @companies_home.each do |user| %>
+          <%= render 'shared/user_item', user: user %>
+          <% end %>
+        </ul>
         <br>
-    <%= link_to 'Show All Canditates', canditates_path %>
-    <% else %>
-      <p>There are no canditates</p>
-    <% end %>
+        <%= link_to 'Show All Companies', companies_path %>
+        <% else %>
+        <p>There are no companies</p>
+        <% end %>
+      </div>
+    </div>
+    
+  </div>
+  
+</div>
+<div class= "col-md-6">
+  <div class= "portlet light bordered">
+    <div class="portlet-title">
+      <div class="caption font-dark">
+        <span class="caption-subject bold uppercase">Last Canditates</span>
+      </div>
+    </div>
+
+    <div class="portlet-body">
+      <div class="CSSAnimationChart">
+        <% if @canditates_home.present? %>
+        <ul class="s-job-list">
+          <% @canditates_home.each do |user| %>
+          <%= render 'shared/user_item', user: user %>
+          <% end %>
+        </ul>
+        <br>
+        <%= link_to 'Show All Canditates', canditates_path %>
+        <% else %>
+        <p>There are no canditates</p>
+        <% end %>
+      </div>
+    </div>
   </div>
 </div>
+
+
+</div>
+
