--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,3 @@
-
 @import "bootstrap-datepicker";
 @import "bootstrap-sprockets";
 @import "bootstrap";
@@ -11,6 +10,7 @@ $gray-medium-light: #1A202C;
 
 body {
   padding-top: 60px;
+  background-color: #f8f8f8 !important;
 }
 
 section {
@@ -262,13 +262,6 @@ span.picture {
   height: 100px;
 }
 
-.form-control{
-  width: 25%
-}
-
-.canditatelist{
-  margin-top: 115px
-}
 
 .imageContainer
 {
@@ -357,6 +350,7 @@ span.picture {
     padding: 25px 0;
     border-top: 1px solid #f3f3f3;
     margin-bottom: 5px;
+    height: 153px;
 }
 
 .s-job-list li:before,
@@ -389,7 +383,7 @@ span.picture {
 
 .s-job-list .s-job-date {
     margin-left: 15px;
-    width: 100px;
+    width: 120px;
     display: inline-block;
     text-align: center;
 }
@@ -507,4 +501,30 @@ span.picture {
 .CSSAnimationChart {
   width: 100%;
   height: 500px;
+}
+
+.knet-header {
+  height: 60px
+}
+
+.navbar-nav > li > a {
+  padding: 30px !important;
+}
+
+hr.ustayrac {
+  height: 1px;
+  width: 100%;
+  clear: both;
+  border-top: 1px dotted #ccc;
+  border-left: 0;
+  border-right: 0;
+  border-bottom: 0;
+  margin: 0;
+  color: #fff;
+  background-color: #fff;
+}
+
+.navbar{
+  background-image: url('/images/banner_navbar.jpg') ;
+  background-repeat: repeat-x ;
 }
