--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -26,6 +26,8 @@
 <br>
 <div class= "canditatelist col-md-12">
   <% if @companies.present? %>
+
+    <ul class="s-job-list">
       <% @companies.each do |user| %>
         
            <div class="users col-md-6">
@@ -33,6 +35,7 @@
            </div>
          
       <% end %>
+    </ul>
     <div class= "center col-md-12 ">
     <%= will_paginate @canditates, :param_name => 'page' %>
     </div>
