--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
           <% if logged_in? && current_user.type_of_users == 3%>
             <%= link_to "Job Portal", backoffice_home_path, id: "logo" %>
           <%else %>
-            <%= link_to "Job Portal", root_path, id: "logo" %>
+            <%= link_to "Job Portal", root_path, id: "logo", style: "padding-bottom: 9px; padding-top: 20px;" %>
           <% end %>
           
         </div>
