--- a/app/views/shared/_unfollow.html.erb
+++ b/app/views/shared/_unfollow.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(current_user.active_relationships.find_by(followed_id: user.id),
              html: { method: :delete },
              remote: true) do |f| %>
-  <%= f.submit "Withdraw Interest", class: "btn  col-xs" %>
+  <%= f.submit "Interested", class: "s-btn s-outlined  s-text-right modalbasvur" %>
 <% end %>
