--- a/app/views/backoffice/index_users.html.erb
+++ b/app/views/backoffice/index_users.html.erb
@@ -2,29 +2,10 @@
 
 <h1>Listing Users</h1>
 
-<table class="table  table-bordered table-striped">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Type</th>
-      <th>Active</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.name %></td>
-        <td><%= user.type_of_users %></td>
-        <td><%= user.active %></td>
-        <td><%= link_to 'Show', backoffice_user_show_path(user) %></td>
-        <td><%= link_to 'Edit', backoffice_user_edit_path(user) %></td>
-        <td><%= link_to 'Destroy', backoffice_user_delete_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-    <%= will_paginate @users, :param_name => 'page' %>
-  </tbody>
-</table>
+  <div class ="result_list">
+      <%= render 'users' %>
+  </div>
+
 
 <br>
