--- a/app/views/backoffice/show_user.html.erb
+++ b/app/views/backoffice/show_user.html.erb
@@ -21,7 +21,7 @@
 </p>
 
 
-<%= link_to 'Change Password', backoffice_user_change_password_path(@user) %>
-<%= link_to 'Edit', backoffice_user_edit_path(@user) %>
-<%= link_to 'Delete', backoffice_user_delete_path(@user), method: :delete, data: { confirm: 'Are you sure?' } %>
-<%= link_to 'List of Users', backoffice_users_all_path %>
+<%= link_to 'Change Password', backoffice_user_change_password_path(@user) %> |
+<%= link_to 'Edit', backoffice_user_edit_path(@user) %> |
+<%= link_to 'Delete', backoffice_user_delete_path(@user), method: :delete, data: { confirm: 'Are you sure?' } %> |
+<%= link_to 'List of Users', backoffice_users_all_path %> |
