--- a/app/views/canditates/index.html.erb
+++ b/app/views/canditates/index.html.erb
@@ -1,16 +1,16 @@
 <h1>Listing Canditates</h1>
 <br>
 <br>
-<div class = "col-md-3">
+<div class = "col-md-3" style="margin-bottom: 200px;">
   <%= form_tag(canditates_path, :method => "get", id: "search-form") do %>
     <br>
     <%= text_field_tag :search, params[:search], placeholder: "Search Canditates" , class: "form-control " %> 
   <br>
     <span class="label label-default">Select Profession area</span>
-      <%= select_tag "profession", ("<option></option>" + options_from_collection_for_select(professions, "id", "area_name", @prev_profession)).html_safe , class: "form-control " %> 
+      <%= select_tag "profession", (options_from_collection_for_select(professions, "id", "area_name", @prev_profession)).html_safe, prompt: "Select Profession" , class: "form-control " %> 
     <br>
     <span class="label label-default">Select City </span>
-      <%= select_tag "city", ("<option></option>" + options_from_collection_for_select(cities, "id", "city_name", @prev_city)).html_safe , class: "form-control" %>
+      <%= select_tag "city", (options_from_collection_for_select(cities, "id", "city_name", @prev_city)).html_safe ,prompt: "Select City", class: "form-control" %>
     <br>
     <%= submit_tag "Search", class: "btn btn-primary btn-md" %>
  <% end %>  
@@ -21,7 +21,7 @@
   
   <label style="font-size: 12pt; color: #626262; padding-left: 10px;"><%= @canditates.count%> Canditate found</label>
   
-  <div style="float: left; width: 760px; margin: 9px 0 9px 9px">
+  <div style="margin: 9px 0 9px">
         <hr class="ustayrac">
   </div>
 
@@ -29,11 +29,7 @@
       <%= render 'canditates' %>
   </div>
 
-  <script>
-  $(function(){
-     $('.pagination a').attr('data-remote', 'true')
-  });
-  </script>
+ 
 
 </div>
 
