--- a/app/views/shared/_notice_item.html.erb
+++ b/app/views/shared/_notice_item.html.erb
@@ -1,12 +1,12 @@
 <li class="ad-list">
 	<div class="s-firm-logo">
-		<%= link_to image_tag(notice.avatar.url(:thumb),:class => "img-responsive"), notice %>
+		<%= link_to image_tag(notice.avatar.url(:medium),:class => "img-responsive"), notice %>
 	</div>
 	<div class="s-job-infos" >
 		<%= link_to notice.title, notice_path(notice), class: 's-job-title s-text-bold s-truncate'  %>
 
 		<div class="s-job-sub-info">
-			<%= strip_tags(notice.summary)[1..50]%>...
+			<%= strip_tags(notice.summary)[0..50]%>...
 
 			<div class="s-pull-right">
 				<span class="s-job-location s-truncate">
