--- a/app/views/users/before_sign_up.html.erb
+++ b/app/views/users/before_sign_up.html.erb
@@ -9,6 +9,6 @@
     <br>
     <br>
     <div class="fluid">
-        <p><%= link_to 'I am a Company', new_user_path(:user_type => '2'), {:style=>'padding-top: 50px; padding-bottom: 50px;', :class => "btn btn-primary btn-lg btn-block"} %></p>
+        <p><%= link_to 'I am a Company', new_user_path(:user_type => '2'), {:style=>'padding-top: 50px; padding-bottom: 50px; margin-bottom: 200px', :class => "btn btn-primary btn-lg btn-block"} %></p>
     </div>
 </div>
