Last Commit before presentation

--- a/app/views/shared/_follow_job.html.erb
+++ b/app/views/shared/_follow_job.html.erb
@@ -3,5 +3,5 @@
 	<%= hidden_field_tag :job_id, job.id %>
 	<%= hidden_field_tag :user_id, user.id %>
 
-	<%= f.submit "Show Interest", class: "s-btn s-outlined s-btn-red s-text-right modalbasvur" %>
+	<%= f.submit "Apply", class: "s-btn s-outlined  btn-primary" %>
 <% end %>
