--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,7 +1,7 @@
 <br>
 <br>
 <p>
-  <%= @user.presentation.html_safe if @user.presentation %>
+  <%= @user.presentation.html_safe if @user.presentation.present? %>
 </p>
 
 <p>
