--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,14 +24,14 @@
 
   <footer class="footer">
   <small>
-    The <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    by <a href="http://www.michaelhartl.com/">Michael Hartl</a>
+    The <a href="#">Best Designers in Porto</a>
+    by <a href="http://www.wiremaze.com/">Site by WIREMAZE</a>
   </small>
   <nav>
     <ul>
       <li><%= link_to "About",  "#" %></li>
       <li><%= link_to "Contact", "#" %></li>
-      <li><a href="http://news.railstutorial.org/">News</a></li>
+      <li><a href="http://www.wiremaze.com/">News WIREMAZE</a></li>
     </ul>
   </nav>
 </footer>
