--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
   <div class= "container">
     <h2 class= "aside" >Active Offers From This Company</h2>
     <% if @other_jobs_from_same_company.present? %>
-      <ul class="users">
+      <ul class="s-job-list">
         <% @other_jobs_from_same_company.each do |job| %>
            <div class="users col-md-6">
            <%= render 'shared/job_item', job: job %>
@@ -27,8 +27,9 @@
       <p>There are no offers from this company</p>
     <% end %>
     <br>
-    <%= link_to 'Show All Companies', companies_path %>
+    
 </div>
+  <%= link_to 'Show All Companies', companies_path %>
 <% else%>
 
 <% end%>
